--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Ejemplofjf</string>
+    <string name="start_message">Comenzar</string>
+    <string name="unknown_text" translatable="false">ansfjekd%#%</string>
+    <string name="welcome">Bienvenido, ¿tendré suerte?</string>
 </resources>
